mountall (2.50) UNRELEASED; urgency=low

  * Add support for pstore.  Closes: #722212.

 -- Steve Langasek <vorlon@debian.org>  Sun, 08 Sep 2013 23:12:35 -0700

mountall (2.49) unstable; urgency=low

  [ James Hunt ]
  * apport/mountall.py: add a mountall apport hook.

  [ Steve Langasek ]
  * Ignore parse errors in /etc/default/rcS or /etc/default/locale; these
    problems shouldn't be allowed to prevent the system from booting.
    LP: #1192514.

 -- Steve Langasek <vorlon@debian.org>  Tue, 02 Jul 2013 15:51:12 -0700

mountall (2.48) unstable; urgency=low

  [ Steve Langasek ]
  * Make sure we don't show the error message claiming a device is not
    ready when we're actually already handling it but are just waiting for
    related upstart jobs that are blocking the mount to finish.
    LP: #1091792.

  [ Stéphane Graber ]
  * Mount a tmpfs on /sys/fs/cgroup if it exists.

 -- Steve Langasek <vorlon@debian.org>  Sat, 09 Mar 2013 00:36:22 +0000

mountall (2.47) unstable; urgency=low

  [ Dave Chiluk ]
  * Adjust parsing of options so mountall doesn't strip options that are
    substrings of these strings (showthrough, optional, bootwait, nobootwait
    or timeout). This fixes the issue where timeo was getting stripped from
    nfs mounts. LP: #1041377.

  [ Steve Langasek ]
  * Ensure callbacks are called directly when running with --no-events,
    otherwise the "event" handling of the non-events never finishes and
    mountall hangs.  LP: #1099349.

 -- Steve Langasek <vorlon@debian.org>  Mon, 14 Jan 2013 16:37:36 -0800

mountall (2.46) unstable; urgency=low

  * Fix a further remaining issue from 2.41: by fixing the missing 'mounted'
    events in 2.43, we have again introduced a case where mountall may block
    waiting for 'mounted MOUNTPOINT=/' to return before handling 'mounted
    MOUNTPOINT=/run' and emitting virtual-filesystems, thus causing
    dependency loops and long boot timeouts.  LP: #1078926.
